<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".logica.CrearCuenta">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/fondo_crear_cuenta_final_1080x"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">


        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_dni"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorBotonVerde">

            <EditText
                android:id="@+id/txt_dni"
                android:layout_width="60mm"
                android:layout_height="55sp"
                android:layout_gravity="center"
                android:layout_marginVertical="10sp"
                android:layout_marginTop="5sp"
                android:ems="10"
                android:fontFamily="@font/roboto_mono_bold_italic"
                android:hint="@string/txt_dni"
                android:textColorHint="@color/colorBotonVerde"
                android:inputType="number"
                android:maxLength="8"
                android:textSize="18sp" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorBotonVerde">

            <EditText
                android:id="@+id/txt_nombre"
                android:layout_width="60mm"
                android:layout_height="55sp"
                android:layout_gravity="center"
                android:layout_marginTop="5sp"
                android:ems="10"
                android:fontFamily="@font/roboto_mono_bold_italic"
                android:hint="@string/txt_Nombre"
                android:textColorHint="@color/colorBotonVerde"
                android:inputType="textPersonName"
                android:textSize="18sp" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_apellido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorBotonVerde">


            <EditText
                android:id="@+id/txt_apellido"
                android:layout_width="60mm"
                android:layout_height="55sp"
                android:layout_gravity="center"
                android:layout_marginTop="5sp"
                android:ems="10"
                android:fontFamily="@font/roboto_mono_bold_italic"
                android:hint="@string/txt_Apellido"
                android:textColorHint="@color/colorBotonVerde"
                android:inputType="textPersonName"
                android:textSize="18sp" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorBotonVerde">

            <EditText
                android:id="@+id/txt_mail"
                android:layout_width="60mm"
                android:layout_height="55sp"
                android:layout_gravity="center"
                android:layout_marginVertical="10sp"
                android:layout_marginTop="10sp"
                android:ems="10"
                android:fontFamily="@font/roboto_mono_bold_italic"
                android:hint="@string/txt_Mail"
                android:textColorHint="@color/colorBotonVerde"
                android:inputType="textEmailAddress"
                android:textSize="18sp" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            android:textColorHint="@color/colorBotonVerde">

            <EditText
                android:id="@+id/txt_pass"
                android:layout_width="60mm"
                android:layout_height="55sp"
                android:layout_gravity="center"
                android:layout_marginTop="5sp"
                android:ems="10"
                android:fontFamily="@font/roboto_mono_bold_italic"
                android:hint="@string/txt_Pass"
                android:textColorHint="@color/colorBotonVerde"
                android:inputType="textPassword"
                android:textSize="18sp" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_reppass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            android:textColorHint="@color/colorBotonVerde">


            <EditText
                android:id="@+id/txt_reppass"
                android:layout_width="60mm"
                android:layout_height="55sp"
                android:layout_gravity="center"
                android:layout_marginTop="5sp"
                android:ems="10"
                android:fontFamily="@font/roboto_mono_bold_italic"
                android:hint="@string/txt_Reppass"
                android:textColorHint="@color/colorBotonVerde"
                android:inputType="textPassword"
                android:textSize="18sp" />

        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/bt_registrarme"
            android:layout_width="60mm"
            android:layout_height="55sp"
            android:layout_gravity="center"
            android:layout_marginTop="30sp"
            android:background="@drawable/stylo_boton_pressed"
            android:drawableLeft="@drawable/ic_action_registrarse"
            android:fontFamily="@font/roboto_mono_bold_italic"
            android:hint="@string/bt_Registrarme"
            android:onClick="registrar"
            android:textColor="@color/colorBotonBlanco"
            android:textColorHint="@color/colorBotonBlanco"
            android:textSize="18sp" />

    </LinearLayout>
</LinearLayout>